# CleanScout_rover

./: .gitattributes  .gitignore  README.md  THIRD_PARTY_NOTICES.md
LCEDA/: Netlist_Schematic1_2026-04-15.tel  STM32F103RCT6_编码器电机驱动部分.eprj  车载Arduino.eprj
OrangePi/: README.md
OrangePi/rk3588_ai/: README.md  RK3588_RKNN_NPU_DIAGNOSIS_REPORT.md  UPSTREAMS.md  YOLO11_CAMERA_DEMO_REPORT.md  YOLO11_VISUAL_DEMO_FIX_REPORT.md  compare_dfl_numpy_torch.py  rknn_capi_smoke.c  test_import_orders.py  test_rknn_core0.py  任务书.txt  任务书2  任务书3  指令合集.md
Raspberrypi/: README.md  指令合集.txt
Raspberrypi/catkin_ws/: NETWORK.md  README.md  README_lsm_406.md  README_rf1_web_stack.md  calibrate_rf1_turn.sh  check_openclaw_gateway.sh  check_ros_master.sh  clean_edge_relay_sessions.sh  clean_mapping_nav_sessions.sh  clean_rf1_web_sessions.sh  clean_ros_sessions.sh  cleanscout_network.sh  record_bench_stack.sh  run_bench_stack.sh  run_edge_relay.sh  run_edge_relay_remote_only.sh  run_mapping_406_lsm.sh  run_nav_and_multifunction_demo.sh  run_rf1_core_stack.sh  run_rf1_web_stack.sh  run_robot_hardware_multifunction.sh  run_slam_mapping.sh  save_map.sh  send_nav_cmd.sh  start_desk_navigation.sh  start_pc_full_navigation.sh  start_pc_mapping_mode2.sh  start_slam_mapping.sh  test_rf1_cmd_vel.sh  use_cleanscout_pc.sh  use_cleanscout_pi.sh
Raspberrypi/catkin_ws/src/clbrobot_project/clbrobot/: CMakeLists.txt  README.md  README_rf1_bridge.md  package.xml
Raspberrypi/catkin_ws/src/clbrobot_project/clbrobot/launch/: README.md  amcl.launch  bench_full_stack.launch  bringup_rf1_min.launch  bringup_rf1_web.launch  desk_map_navigation.launch  mpu6050_bringup.launch  nav_base_stack.launch  robot_state_publisher.launch
Raspberrypi/catkin_ws/src/clbrobot_project/clbrobot/launch/core/: bringup_rf1_core.launch  imu_only.launch
Raspberrypi/catkin_ws/src/clbrobot_project/clbrobot/launch/demo/: multi_function_demo.launch
Raspberrypi/catkin_ws/src/clbrobot_project/clbrobot/launch/include/imu/: imu.launch  mpu6050_chain.launch
Raspberrypi/catkin_ws/src/clbrobot_project/clbrobot/launch/lidar/: rplidar.launch
Raspberrypi/catkin_ws/src/clbrobot_project/clbrobot/launch/nav/: nav_406.launch  navigation_406_rf1.launch  navigation_406_rf1_teb.launch
Raspberrypi/catkin_ws/src/clbrobot_project/clbrobot/launch/slam/: laser_scan_matcher_406.launch  lidar_slam_pi.launch  mapping_406_rf1.launch  slam_406.launch  slam_406_lsm.launch
Raspberrypi/catkin_ws/src/clbrobot_project/clbrobot/maps/: 406.pgm  406.yaml  407-5.22-2120.pgm  407-5.22-2120.yaml  407map.yaml  README.md
Raspberrypi/catkin_ws/src/clbrobot_project/clbrobot/param/navigation/: README.md  base_local_planner_params.yaml  costmap_mecanum_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.xml  move_base_params.yaml  move_base_teb.xml  move_base_teb_params.yaml  teb_local_planner_params.yaml
Raspberrypi/catkin_ws/src/clbrobot_project/clbrobot/scripts/: README.md
Raspberrypi/catkin_ws/src/clbrobot_project/clbrobot/scripts/rf1_bridge/: PROTOCOL.md  README.md  openrf1_min_bridge_smoketest.py  openrf1_smoketest.py
Raspberrypi/catkin_ws/src/clbrobot_project/clbrobot/urdf/: cleanscout_geometry.xacro
Raspberrypi/catkin_ws/src/cleanscout_navigation/: CMakeLists.txt  README.md  package.xml
Raspberrypi/catkin_ws/src/cleanscout_navigation/config/: routes.yaml
Raspberrypi/catkin_ws/src/cleanscout_navigation/launch/: route_tools.launch
Raspberrypi/catkin_ws/src/cleanscout_navigation/scripts/: record_current_pose.py  route_executor.py
Raspberrypi/catkin_ws/src/csrpi_base_bridge/: CMakeLists.txt  README.md  package.xml
Raspberrypi/catkin_ws/src/csrpi_base_bridge/launch/: cmd_vel_safety_gate.launch
Raspberrypi/catkin_ws/src/csrpi_base_bridge/scripts/: base_bridge.py  cmd_vel_safety_gate.py  cmdvel_to_rf1.py  cmdvel_to_wheels.py  enc_to_raw_vel.py  rf1_serial_bridge.py  rf1_turn_calibrator.py  rf1_vel_to_odom.py  scan_contract_stub.py  wheel_bridge.py
Raspberrypi/catkin_ws/src/csrpi_base_bridge/test/: test_cmd_vel_safety_gate.py  test_rf1_serial_bridge.py
Raspberrypi/catkin_ws/src/csrpi_edge_relay/: CMakeLists.txt  README.md  README_edge_relay.md  package.xml
Raspberrypi/catkin_ws/src/csrpi_edge_relay/launch/: edge_relay.launch
Raspberrypi/catkin_ws/src/csrpi_edge_relay/scripts/: edge_relay.py
Raspberrypi/catkin_ws/src/csrpi_fan_bridge/: CMakeLists.txt  README.md  package.xml
Raspberrypi/catkin_ws/src/csrpi_fan_bridge/launch/: fan_dual_lid_bridge.launch
Raspberrypi/catkin_ws/src/csrpi_fan_bridge/scripts/: fan_bridge.py  fan_dual_bridge.py  fan_dual_fg_test.py  fan_dual_test.py  fan_pwm_test.py  relay_toggle_test.py  servo_gpio12_test.py
Raspberrypi/catkin_ws/src/csrpi_openmv_bridge/: CMakeLists.txt  README.md  package.xml
Raspberrypi/catkin_ws/src/csrpi_openmv_bridge/launch/: openmv_usb_bridge.launch
Raspberrypi/catkin_ws/src/csrpi_openmv_bridge/scripts/: openmv_usb_bridge.py
Raspberrypi/catkin_ws/src/mpu6050_i2c_bridge/: CMakeLists.txt  README.md  package.xml
Raspberrypi/catkin_ws/src/mpu6050_i2c_bridge/launch/: mpu6050_raw.launch
Raspberrypi/catkin_ws/src/mpu6050_i2c_bridge/scripts/: mpu6050_node.py
Raspberrypi/docs/: README.md  teb_rear_blind_sector_and_km_recalibration.md  (+2 more)
Tyler_1_Library/: Tyler_1.cpp  Tyler_1.h
docs/: 000操作指令  C-0.0.1B_requirements_report.md  C-3.4.2_仓库总述与导航.md  C-4.0.1_实车几何测量封存与URDF前置记录.md  CleanScout_Project_Handover_Summary.md  DUAL_UART_PROTOCOL.md  OpenClaw_树莓派4B_项目交接书.md  RESOURCE_AUDIT.md  before_all.md  clean_scout_rover_退休交接总包.md  edge-relay-joint-debug.md  交流使用.txt  快速上手.md  树莓派端_退休交接书.md  联调书.txt
firmware/: README.md
firmware_notes/: RF1_ARM_EXEC_REQUIRED_CHANGES.md  RF1_RF4_BUS_SERVO_MIGRATION_PLAN.md
tools/: build_f411_bridge.ps1  compile_uno.ps1  compile_uno_cli.ps1  install_sketchbook_links.ps1  openrf1_c3_0_5_probe.ps1  openrf1_serial_probe.ps1  setup_arduino_cli.ps1  uno_serial_probe.ps1
vue3/: .env.app.local  .env.h5.local  .env.mp-weixin.local  .env.mp-weixin.production  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json
(+1047 files in other folders)
