<?xml version="1.0"?>
<package format="2">
  <name>cleanscout_navigation</name>
  <version>0.1.0</version>
  <description>CleanScout route recording and route execution tools.</description>

  <maintainer email="3091964993@qq.com">Git-ys1</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf</exec_depend>
</package>
