<?xml version="1.0"?>
<package format="2">
  <name>csrpi_base_bridge</name>
  <version>0.0.1</version>
  <description>Persistent Raspberry Pi serial bridge for the UNO base controller.</description>

  <maintainer email="3091964993@qq.com">Git-ys1</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <export/>
</package>
