<?xml version="1.0"?>
<package format="2">
  <name>csrpi_edge_relay</name>
  <version>0.0.1</version>
  <description>Edge relay transport for backend-centric ROS integration on Raspberry Pi.</description>

  <maintainer email="3091964993@qq.com">Git-ys1</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export/>
</package>
