<?xml version="1.0"?>
<package format="2">
  <name>csrpi_fan_bridge</name>
  <version>0.0.1</version>
  <description>Minimal Raspberry Pi relay and PWM bridge for the Nidec fan module.</description>

  <maintainer email="3091964993@qq.com">Git-ys1</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export/>
</package>
