<?xml version="1.0"?>
<package format="2">
  <name>clbrobot</name>
  <version>0.0.1</version>
  <description>CleanScout Raspberry Pi launch entry package.</description>

  <maintainer email="3091964993@qq.com">Git-ys1</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>csrpi_base_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>laser_scan_matcher</depend>
  <depend>mpu6050_i2c_bridge</depend>
  <depend>nav_msgs</depend>
  <depend>rosbridge_server</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>tf</exec_depend>
  <export/>
</package>
